bug fix on IE10

--- a/src/br-select-box.scss
+++ b/src/br-select-box.scss
@@ -39,7 +39,8 @@
   display: flex;
   flex-direction: column;
   min-width: 288px;
-  max-width: $screen-phone;
+  // max-width: $screen-phone;
+  max-width: 288px;
   max-height: 100%;
   overflow: hidden;
   background: #F5F5F5;
